test_case/rust-lang_rust/55988_439489339.rs
rust
    || {
        &mut x //~ ERROR cannot infer
    };
